# pyngding

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
pyngding/: anomaly.py  api_keys.py  auth.py  db.py  dns_stats.py  ipv6.py  main.py  notifications.py  retention.py  scheduler.py  settings.py  vendor.py  web.py
pyngding/anomaly/: __init__.py  anomaly.py
pyngding/anomaly/honeypot/: README.md
pyngding/core/: __init__.py  config.py  crypto.py  db.py  logger.py  main.py
pyngding/data/: __init__.py  retention.py  vendor.py
pyngding/honeypot/: __init__.py
pyngding/integrations/: __init__.py  adguard.py  dns_stats.py  notifications.py
pyngding/scanning/: __init__.py  ipv6.py  scanner.py  scheduler.py
pyngding/static/: styles.css
pyngding/templates/: admin_adguard.tpl  admin_api_keys.tpl  admin_hosts.tpl  admin_ipv6.tpl  admin_settings.tpl  dashboard.tpl  hosts.tpl  layout.tpl
pyngding/templates/partials/: dns-host.tpl  hosts-table.tpl  recent-changes.tpl  summary.tpl
pyngding/web/: __init__.py  api_keys.py  auth.py  middleware.py  settings.py  web.py
pyngding/web/routes/: __init__.py  admin.py  api.py  dashboard.py  hosts.py
