[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docker*"]

[tool.setuptools.package-data]
pyngding = ["templates/**/*", "static/**/*"]

[project]
name = "pyngding"
version = "0.1.0"
description = "A lightweight LAN presence scanner and dashboard for network administrators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottle>=0.12.0",
]

[project.scripts]
pyngding = "pyngding.core.main:cli"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Ignore line too long - many SQL queries are long

[tool.ruff.lint.isort]
known-first-party = ["pyngding"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
